<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/c_ffffff">

    <ImageView
        android:id="@+id/sign_up_image"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginTop="100dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:background="@drawable/app_icon_px150"
        />

    <EditText
        android:id="@+id/sign_up_email_edit_text"
        android:layout_width="@dimen/login_layout_width"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:hint="@string/login_email_hint"
        android:inputType="textEmailAddress"
        android:singleLine="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sign_up_image"/>

    <EditText
        android:id="@+id/sign_up_password_edit_text"
        android:layout_width="@dimen/login_layout_width"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:hint="@string/login_password_hint"
        android:inputType="textPassword"
        android:singleLine="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sign_up_email_edit_text" />

    <EditText
        android:id="@+id/sign_up_name_edit_text"
        android:layout_width="@dimen/login_layout_width"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:hint="@string/login_name_hint"
        android:singleLine="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sign_up_password_edit_text" />

    <EditText
        android:id="@+id/sign_up_school_number_edit_text"
        android:layout_width="@dimen/login_layout_width"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:hint="@string/login_school_number_hint"
        android:singleLine="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sign_up_name_edit_text" />

    <Button
        android:id="@+id/sign_up_submit_btn"
        android:layout_width="@dimen/login_layout_width"
        android:layout_height="@dimen/login_layout_height"
        android:text="@string/login_sign_up_btn_text"
        style="@style/ButtonStyle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sign_up_school_number_edit_text"
        app:layout_constraintBottom_toBottomOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>