<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/c_ffffff">

    <ImageView
        android:id="@+id/login_image"
        android:layout_width="@dimen/login_layout_width"
        android:layout_height="@dimen/login_layout_width"
        android:layout_marginTop="40dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:background="@drawable/app_icon_px300"/>

    <EditText
        android:id="@+id/login_email_edit_text"
        android:layout_width="@dimen/login_layout_width"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_image"
        android:inputType="textEmailAddress"
        android:hint="@string/login_email_hint"
        android:singleLine="true"
        />

    <EditText
        android:id="@+id/login_password_edit_text"
        android:layout_width="@dimen/login_layout_width"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_email_edit_text"
        android:inputType="textPassword"
        android:hint="@string/login_password_hint"
        android:singleLine="true"
        />

    <Button
        android:id="@+id/login_sign_in_btn"
        android:layout_width="@dimen/login_layout_width"
        android:layout_height="@dimen/login_layout_height"
        android:text="@string/login_sign_in_btn_text"
        style="@style/ButtonStyle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_password_edit_text"
        app:layout_constraintBottom_toTopOf="@+id/login_sign_up_btn"
        app:layout_constraintVertical_chainStyle="packed"/>

    <Button
        android:id="@+id/login_sign_up_btn"
        android:layout_width="@dimen/login_layout_width"
        android:layout_height="@dimen/login_layout_height"
        android:layout_marginTop="5dp"
        android:text="@string/login_sign_up_btn_text"
        style="@style/ButtonStyle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_sign_in_btn"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <FrameLayout
        android:id="@+id/login_popup_layout"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        />



</androidx.constraintlayout.widget.ConstraintLayout>