<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="200dp"
    android:layout_marginBottom="10dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/c_F6CE55">

    <TextView
        android:id="@+id/popup_search_category_text"
        android:layout_width="70dp"
        android:layout_height="wrap_content"
        android:paddingEnd="8dp"
        app:layout_constraintStart_toStartOf="@+id/popup_search_text_start_guide"
        app:layout_constraintTop_toTopOf="@+id/popup_search_top_guide"
        android:text="@string/search_text_category"
        android:gravity="right"
        android:textSize="15sp" />

    <Spinner
        android:id="@+id/popup_search_category_spinner"
        android:layout_width="200dp"
        android:layout_height="19dp"
        app:layout_constraintStart_toEndOf="@+id/popup_search_category_text"
        app:layout_constraintTop_toTopOf="@+id/popup_search_category_text"
        android:entries="@array/category"
        android:spinnerMode="dialog"/>

    <TextView
        android:id="@+id/popup_search_lost_location_text"
        android:layout_width="70dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:paddingEnd="8dp"
        app:layout_constraintStart_toStartOf="@+id/popup_search_text_start_guide"
        app:layout_constraintTop_toBottomOf="@+id/popup_search_category_text"
        android:text="@string/search_lost_location"
        android:gravity="right"
        android:textSize="15sp" />

    <Spinner
        android:id="@+id/popup_search_lost_location_spinner_1"
        android:layout_width="120dp"
        android:layout_height="19dp"
        app:layout_constraintStart_toEndOf="@+id/popup_search_lost_location_text"
        app:layout_constraintTop_toTopOf="@+id/popup_search_lost_location_text"
        android:spinnerMode="dialog"/>

    <Spinner
        android:id="@+id/popup_search_lost_location_spinner_2"
        android:layout_width="120dp"
        android:layout_height="19dp"
        app:layout_constraintStart_toEndOf="@+id/popup_search_lost_location_spinner_1"
        app:layout_constraintTop_toTopOf="@+id/popup_search_lost_location_spinner_1"
        android:spinnerMode="dialog"/>


    <TextView
        android:id="@+id/popup_search_lost_date"
        android:layout_width="70dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:paddingEnd="8dp"
        app:layout_constraintStart_toStartOf="@+id/popup_search_text_start_guide"
        app:layout_constraintTop_toBottomOf="@+id/popup_search_lost_location_text"
        android:text="@string/search_lost_date"
        android:gravity="right"
        android:textSize="15sp" />

    <Spinner
        android:id="@+id/popup_search_lost_date_year"
        android:layout_width="100dp"
        android:layout_height="19dp"
        app:layout_constraintStart_toEndOf="@+id/popup_search_lost_date"
        app:layout_constraintTop_toTopOf="@+id/popup_search_lost_date"
        android:entries="@array/date_year"
        android:spinnerMode="dialog"/>

    <TextView
        android:id="@+id/popup_search_lost_date_year_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="90dp"
        app:layout_constraintStart_toEndOf="@+id/popup_search_lost_date"
        app:layout_constraintTop_toTopOf="@+id/popup_search_lost_date_year"
        android:text="년"/>

    <Spinner
        android:id="@+id/popup_search_lost_date_month"
        android:layout_width="80dp"
        android:layout_height="19dp"
        android:layout_marginStart="5dp"
        app:layout_constraintStart_toEndOf="@+id/popup_search_lost_date_year"
        app:layout_constraintTop_toTopOf="@+id/popup_search_lost_date_year"
        android:entries="@array/date_month"
        android:spinnerMode="dialog"/>

    <TextView
        android:id="@+id/popup_search_lost_date_month_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="70dp"
        app:layout_constraintStart_toEndOf="@+id/popup_search_lost_date_year_text"
        app:layout_constraintTop_toTopOf="@+id/popup_search_lost_date_month"
        android:text="월"/>

    <Spinner
        android:id="@+id/popup_search_lost_date_day"
        android:layout_width="80dp"
        android:layout_height="19dp"
        android:layout_marginStart="5dp"
        app:layout_constraintStart_toEndOf="@+id/popup_search_lost_date_month"
        app:layout_constraintTop_toTopOf="@+id/popup_search_lost_date_month"
        android:spinnerMode="dialog"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="70dp"
        app:layout_constraintStart_toEndOf="@+id/popup_search_lost_date_month_text"
        app:layout_constraintTop_toTopOf="@+id/popup_search_lost_date_day"
        android:text="일"/>

    <TextView
        android:id="@+id/popup_search_title_text"
        android:layout_width="70dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:paddingEnd="8dp"
        app:layout_constraintStart_toStartOf="@+id/popup_search_text_start_guide"
        app:layout_constraintTop_toBottomOf="@+id/popup_search_lost_date"
        android:text="@string/search_title"
        android:gravity="right"
        android:textSize="15sp" />

    <EditText
        android:id="@+id/popup_search_title_edit_text"
        android:layout_width="170dp"
        android:layout_height="25dp"
        android:maxLines="1"
        android:paddingStart="5dp"
        android:hint="검색어를 입력해주세요."
        android:textSize="15sp"
        android:background="@drawable/bg_search_title_edt"
        app:layout_constraintTop_toTopOf="@+id/popup_search_title_text"
        app:layout_constraintBottom_toBottomOf="@+id/popup_search_title_text"
        app:layout_constraintStart_toStartOf="@+id/popup_search_lost_date_year"/>

    <ImageButton
        android:id="@+id/popup_search_btn"
        android:layout_width="44dp"
        android:layout_height="30dp"
        android:layout_marginEnd="5dp"
        app:layout_constraintTop_toTopOf="@+id/popup_search_title_edit_text"
        app:layout_constraintBottom_toBottomOf="@+id/popup_search_title_edit_text"
        app:layout_constraintStart_toEndOf="@+id/popup_search_title_edit_text"
        app:layout_constraintEnd_toStartOf="@+id/popup_search_image_btn"
        android:background="@drawable/filter_search_btn"
        app:layout_constraintHorizontal_chainStyle="packed"/>


    <ImageButton
        android:id="@+id/popup_search_image_btn"
        android:layout_width="44dp"
        android:layout_height="30dp"
        app:layout_constraintStart_toEndOf="@+id/popup_search_btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/popup_search_btn"
        app:layout_constraintBottom_toBottomOf="@+id/popup_search_btn"
        android:background="@drawable/image_search_btn"/>

    <ImageButton
        android:id="@+id/popup_search_reload_btn"
        android:layout_width="44dp"
        android:layout_height="30dp"
        android:layout_marginStart="10dp"
        android:layout_marginBottom="5dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/popup_search_title_text"
        app:layout_constraintBottom_toBottomOf="parent"
        android:background="@drawable/clear_btn"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/popup_search_text_start_guide"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="10dp"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/popup_search_top_guide"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="10dp"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/popup_search_selector_start_guide"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="10dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>